--- a/source/_posts/OS-X-不能使用127002的解决方法.md
+++ b/source/_posts/OS-X-不能使用127002的解决方法.md
@@ -1,12 +1,15 @@
-title: OS X 不能使用127.0.0.2的解决方法
+title: OS X 不能使用 127.0.0.2 的解决方法
 date: 2014-09-17 17:48:19
-tags: [折腾,mac]
-categories: [front-end,mac]
+tags: [macOs]
+categories: [power user of everything]
+
 ---
+
 #### 原因
+
 FreeBSD (also OS X, and I believe NetBSD & OpenBSD) will respond to requests sent to configuredaddresses on the loopback interface, just as they would for addresses on any other interface -- If you want an answer you need to assign the address first:
 
-``` shell
+```shell
 mgraziano@monitor ~]$ ifconfig lo0
 lo0: flags=8049<UP,LOOPBACK,RUNNING,MULTICAST> metric 0 mtu 16384
     options=3<RXCSUM,TXCSUM>
@@ -38,9 +41,9 @@ PING 127.1.1.1 (127.1.1.1): 56 data bytes
 ```
 
 #### 解决
-``` shell
+
+```shell
 $ sudo ifconfig lo0 alias 127.0.0.2 netmask 0xFFFFFFFF
 ```
-
 
 via [serverfault.com](http://serverfault.com/questions/293874/why-cant-i-ping-an-address-on-the-loopback-device-under-freebsd)
