--- a/source/_posts/给新博客弄了个404页面.md
+++ b/source/_posts/给新博客弄了个404页面.md
@@ -1,14 +1,17 @@
-title: 给新博客弄了个404页面
+title: 给新博客弄了个 404 页面
 date: 2014-08-26 20:46:09
 tags: [hexo,404]
-category: [hexo]
+category: [power user of everything]
+
 ---
-很简单,在/source/下新建404.html,里面内容自由发挥.
-如果不想让hexo自作主张的渲染,可以在文件开始处加上
-``` markdown
-layout: false
----
+
+很简单,在/source/下新建 404.html,里面内容自由发挥.
+如果不想让 hexo 自作主张的渲染,可以在文件开始处加上
+
+```markdown
+## layout: false
 ```
+
 Over.
 可以在[这里](http://trainspott.in/404)看到效果哦
 
