--- a/source/_drafts/每月电影201809.md
+++ b/source/_drafts/每月电影201809.md
@@ -1,12 +1,12 @@
 ---
 title: 每月电影201809
 category: [movies]
-? tags
+tags: [走到尽头, 韩国电影]
 ---
 
 [走到尽头 끝까지 간다 (2014)](https://movie.douban.com/subject/25766529/)
 
-<div style="vertical-align:top; display: inline-block;width: 50%">![](https://ws4.sinaimg.cn/large/0069RVTdgy1fv5kv0luqzj307i0aqwfu.jpg)</div>
+![](https://ws4.sinaimg.cn/large/0069RVTdgy1fv5kv0luqzj307i0aqwfu.jpg)
 
 豆瓣评分： 7.8/10
 个人评分： 8.5/10
