--- a/source/_posts/一周网摘201809-2.md
+++ b/source/_posts/一周网摘201809-2.md
@@ -6,7 +6,7 @@ tags: nginx
 
 ## [nginxconfig.io](https://nginxconfig.io/)
 
-<div style="vertical-align:top; display: inline-block;width: 50%">![](/pic/20180910/nginxconfig.io.png)</div>
+<div style="vertical-align:top; display: inline-block;width: 50%">![](/pic/20180910/nginxconfig.io.jpg)</div>
 
 > 比较懒不想写 Nginx 配置？可以去 nginxconfig.io 在线生成一套，有前端（MVVM）、PHP 后端、Node.js、单页应用、WordPress 等多个预置模板，一般需求稍微改改就够了。
 
@@ -14,7 +14,41 @@ tags: nginx
 
 ## [口红色号名称 - RGB 颜色值](https://github.com/Ovilia/lipstick/blob/gh-pages/src/lipstick.json)
 
-<div style="vertical-align:top; display: inline-block;width: 50%">![](/pic/20180910/lipstick.png)</div>
+```json
+{
+    "brands": [{
+        "name": "圣罗兰",
+        "series": [{
+            "name": "莹亮纯魅唇膏",
+            "lipsticks": [{
+                "color": "#D62352",
+                "id": "49",
+                "name": "撩骚"
+            }, {
+                "color": "#DC4B41",
+                "id": "14",
+                "name": "一见倾心"
+            }, {
+                "color": "#B22146",
+                "id": "05",
+                "name": "浮生若梦"
+            }, {
+                "color": "#A25356",
+                "id": "08",
+                "name": "纯真梦幻"
+            },
+            ...
+      }, {
+        "name": "香奈儿可可小姐",
+        "series": [{
+            "name": "唇膏水亮",
+            "lipsticks": [{
+                "id": "69",
+                "color": "#F17365",
+                "name": "传情"
+            },
+            ...
+```
 
 > “老婆你看我还是很疼你的”
 
@@ -22,12 +56,19 @@ tags: nginx
 
 ## 精辟
 
-<div style="vertical-align:top; display: inline-block;width: 60%">![](/pic/20180910/1536570412931.jpg)</div>
+> 这就好像说寺庙门口阮老师在给穷人施粥，这时候一个（伪）美食家走了过来，拿起勺子在桶里搅来搅去，然后从桶底捞出了一根头发，接着就大声的向大家喊到：
+> 快来看，这个人做的粥有问题，何止是有问题，简直是完全错误的。
+> 阮老师让很多人从饿肚子到吃饱饭，但它可能确实就是清粥白饭，偶尔也有点瑕疵。
+> 但那些高喊着大家要吃燕窝鲍鱼的人，你们倒是能长年累月的拿出来分给大家啊。
+> 结果这些人只是说着风凉话，看着热闹，最后还一哄而上砸了人家的摊子。
+> 你说你们是不是有病
+
+via [如何看待文章《面试官：阮一峰版的快速排序完全是错的》？ - 王德福的回答 - 知乎](https://www.zhihu.com/question/276746146/answer/391815949)
 
 ---
 
 [visualgo.net](https://visualgo.net/zh)
 
-<div style="vertical-align:top; display: inline-block;width: 60%">![](/pic/20180910/visualgo.png)</div>
+<div style="vertical-align:top; display: inline-block;width: 60%">![](/pic/20180910/visualgo.jpg)</div>
 
 > 推荐一个算法可视化项目，常见的算法基本都找的到，并且每一步都会动态演示出来，不过有点美中不足的是连伪代码都顺手翻译了（看到“做...while”这种组合挺懵逼的……不习惯的话可以切英文版），初学算法的话可以看一看。
