--- a/source/_posts/发几张夏天拍的照片.md
+++ b/source/_posts/发几张夏天拍的照片.md
@@ -7,8 +7,8 @@ category: [photograph]
 
 试一下[七牛云](http://www.qiniu.com/)的效果
 
-![](http://stariveer.qiniudn.com/photos/0826_1030951.jpg)
+![](/pic/qiniu/photos/0826_1030951.jpg)
 
-![](http://stariveer.qiniudn.com/photos/0826_1030901.jpg)
+![](/pic/qiniu/photos/0826_1030901.jpg)
 
-![](http://stariveer.qiniudn.com/photos/0826_1030895.jpg)
+![](/pic/qiniu/photos/0826_1030895.jpg)
