--- a/source/_posts/给新博客弄了个404页面.md
+++ b/source/_posts/给新博客弄了个404页面.md
@@ -15,4 +15,4 @@ category: [power user of everything]
 Over.
 可以在[这里](http://trainspott.in/404)看到效果哦
 
-![](http://stariveer.qiniudn.com/index/404.jpg)
+![](/pic/qiniu/index/404.jpg)
